--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>🎵 Mi Reproductor de Música</h1>
+    <h1>Ariel Chávez</h1>
 
     <div class="main-container">
         <div class="controls-column">
